Revise textbook headings

--- a/syllabus/STAT446-646-Intro-to-Bayesian-Statistics-syllabus-SP21.html
+++ b/syllabus/STAT446-646-Intro-to-Bayesian-Statistics-syllabus-SP21.html
@@ -378,12 +378,14 @@ border-top: 1px solid #cccccc;
 <li>synthesize course concepts in an application of Bayesian modeling to real-world data.</li>
 </ul>
 </div>
-<div id="textbooks-course-materials" class="section level2">
-<h2>Textbooks &amp; Course Materials</h2>
+<div id="required-textbook" class="section level2">
+<h2>Required textbook</h2>
 <p><em>Introduction to Bayesian Statistics</em>, 3rd edition, by William M. BOLSTAD and James M. CURRAN.</p>
 <p><a href="https://www.wiley.com/en-us/Introduction+to+Bayesian+Statistics%2C+3rd+Edition-p-9781118091562">Textbook website</a></p>
 <p><strong>MAKE SURE TO GET THE 3rd EDITION</strong></p>
-<p><em>Supplemental texts</em></p>
+</div>
+<div id="supplemental-texts-resources" class="section level2">
+<h2>Supplemental texts / resources</h2>
 <p>Modern best practices for coding and reporting <code>R</code> analyses:<br />
 <em>R for data science: import, tidy, transform, visualize, and model data</em>, Hadley WICKHAM and Garrett GROLEMUND. <a href="https://r4ds.had.co.nz/">Online textbook</a></p>
 <p>Excellent Introduction to applied Bayesian modeling motivated by information theory: <em>Statistical Rethinking</em>, 2nd edition, Richard MCELREATH <a href="https://xcelab.net/rm/statistical-rethinking/">Textbook website</a></p>
