Revise 2nd day (B2) v2

--- a/meeting_agendas/2_prob_review_BayesRule.html
+++ b/meeting_agendas/2_prob_review_BayesRule.html
@@ -3188,35 +3188,41 @@ slide:not(.current) .plotly.html-widget{
       <h1 data-config-title><!-- populated from slide_config.json --></h1>
       
       <p data-config-presenter><!-- populated from slide_config.json --></p>
-            <p style="margin-top: 6px; margin-left: -2px;">27 Jan 2021 (<em>updated: 2021-01-25)</em></p>
+            <p style="margin-top: 6px; margin-left: -2px;">27 Jan 2021 (<em>updated: 2021-01-26)</em></p>
           </hgroup>
   </slide>
 
-<slide class=""><hgroup><h2>i. Start-of-class work</h2></hgroup><article  id="i.-start-of-class-work" class="smaller ">
+<slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>Start-of-class work</h2></hgroup><article  id="start-of-class-work" class="smaller ">
 
-<p>Discuss the following random experiment:</p>
+</article></slide><slide class=""><hgroup><h2>Motivating example: Four boys? What are the chances?</h2></hgroup><article  id="motivating-example-four-boys-what-are-the-chances" class="smaller ">
 
-<p>I have prepared three sets of cards for each student. Each set has three cards: One with both sides pink, one with both sides blue, and one with a blue and pink side.</p>
+<p>Suppose there are four children in a family. Which of the following sequences is most likely?</p>
 
-<p>If I select a card at random and reveal a blue side, what is the probability that the other side is also blue?</p>
+<ol>
+<li><code>bbbb</code></li>
+<li><code>bgbg</code></li>
+<li><code>gggg</code></li>
+</ol>
 
-</article></slide><slide class=""><hgroup><h2>What’s the color on the other side of the card?</h2></hgroup><article  id="whats-the-color-on-the-other-side-of-the-card" class="smaller ">
+<p><Draw probablity tree on the ipad></p>
 
-<p>Class demonstration.</p>
+</article></slide><slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>1. Administration items</h2></hgroup><article  id="administration-items" class="smaller ">
 
-</article></slide><slide class=""><hgroup><h2>1. Administration items</h2></hgroup><article  id="administration-items" class="smaller ">
-
-<h3>Discuss learning outcomes omitted in meeting 1</h3>
+</article></slide><slide class=""><hgroup><h2>learning outcomes omitted in meeting 1</h2></hgroup><article  id="learning-outcomes-omitted-in-meeting-1" class="smaller ">
 
 <p>Let’s revisit <a href='~/OneDrive%20-%20University%20of%20Nevada,%20Reno/Teaching/Bayes_course/git_public/meeting_agendas/1_intro.html' title=''>1_intro.html</a> to discuss learning outcomes and assessment.</p>
 
-<h3>Completing HW</h3>
+</article></slide><slide class=""><hgroup><h2>Completing HW 1</h2></hgroup><article  id="completing-hw-1" class="smaller ">
 
-<p>Let’s discuss HW 1 expectations and evalutation.</p>
+<p>Let’s discuss HW 1 expectations and evalutation:</p>
 
-</article></slide><slide class=""><hgroup><h2>2. Probability review</h2></hgroup><article  id="probability-review" class="smaller ">
+<p><a href='https://unr.canvaslms.com/courses/65495/assignments/739522' title=''>https://unr.canvaslms.com/courses/65495/assignments/739522</a></p>
 
-<p>Please define and notate (when appropriate) without referring to the text or Internet. You may discuss with those around you.</p>
+</article></slide><slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>2. Probability review</h2></hgroup><article  id="probability-review" class="smaller ">
+
+</article></slide><slide class=""><hgroup><h2>Probability terms</h2></hgroup><article  id="probability-terms" class="smaller ">
+
+<p>Please define and notate (when appropriate) without referring to the text or Internet.</p>
 
 <ol>
 <li>Random experiment</li>
@@ -3228,7 +3234,7 @@ slide:not(.current) .plotly.html-widget{
 <li>Complement of an event. What symbol is used?</li>
 </ol>
 
-<h3>Discuss deductive logic and plausible reasoning</h3>
+</article></slide><slide class=""><hgroup><h2>Discuss deductive logic and plausible reasoning</h2></hgroup><article  id="discuss-deductive-logic-and-plausible-reasoning" class="smaller ">
 
 <p>from Bolstad &amp; Curran Ch.4, Section 4.1, p.59:</p>
 
@@ -3244,15 +3250,13 @@ slide:not(.current) .plotly.html-widget{
 <p><em>Statistical inference</em> is an inductive process for making inferences about a population parameter, by quantifying how plausible parametre values are given the observed data or other information.</p>
 </blockquote>
 
-<h3>Desired properties of plausibility measures (p.61)</h3>
-
-<p><Board></p>
+</article></slide><slide class=""><hgroup><h2>Desired properties of plausibility measures (p.61)</h2></hgroup><article  id="desired-properties-of-plausibility-measures-p.61" class="smaller ">
 
 <p>Logicians have proved that any set of plausibilities that have the desired properties must operate using the rules of probability! So probability is <em>the way</em> to reason formally with uncertanity.</p>
 
 <p><em>Bayesian statistics uses the rules of probability to revise our belief given the data</em>.</p>
 
-<h3>Axioms of probability</h3>
+</article></slide><slide class=""><hgroup><h2>Axioms of probability</h2></hgroup><article  id="axioms-of-probability" class="smaller ">
 
 <p>(from Bolstad &amp; Curran Ch.4, Section 4.3, p.64)</p>
 
@@ -3262,31 +3266,18 @@ slide:not(.current) .plotly.html-widget{
 <li>If \(A\) and \(B\) are <em>mutually exclusive</em> events, then \(P(A \cup B) = P(A) + P(B)\). (probability is <em>additive</em> over disjoint events).</li>
 </ol>
 
-<h3>Joint probability</h3>
+</article></slide><slide class=""><hgroup><h2>Joint probability example revisited</h2></hgroup><article  id="joint-probability-example-revisited" class="smaller ">
 
-<h4>Motivating example: Four boys? What are the chances?</h4>
+</article></slide><slide class=""><hgroup><h2>Now let’s discuss a realistic and (perhaps) surprising twist to the birth calculation:</h2></hgroup><article  id="now-lets-discuss-a-realistic-and-perhaps-surprising-twist-to-the-birth-calculation" class="smaller ">
 
-<p>Suppose there are four children in a family. Which of the following sequences is most likely?</p>
-
-<ol>
-<li><code>bbbb</code></li>
-<li><code>bgbg</code></li>
-<li><code>gggg</code></li>
-</ol>
-
-<p><Draw probablity tree on the board></p>
-
-<p>Now let’s discuss a realistic and (perhaps) surprising twist to the calculation:</p>
-
-<pre class = 'prettyprint lang-r'>## our code here
-prob_female &lt;- 0.487
+<pre class = 'prettyprint lang-r'>prob_female &lt;- 0.487 ## actual rate of female human babies
 prob_male &lt;- 1 - prob_female
 ## probability four male births
 prob_male^4</pre>
 
 <pre >## [1] 0.06925792</pre>
 
-<pre class = 'prettyprint lang-r'>1/16</pre>
+<pre class = 'prettyprint lang-r'>1/16 ## compare to crude estimate.</pre>
 
 <pre >## [1] 0.0625</pre>
 
@@ -3295,17 +3286,17 @@ prob_male^4</pre>
 
 <pre >## [1] 0.06241553</pre>
 
-<h3>Joint probability for independent events</h3>
+</article></slide><slide class=""><hgroup><h2>Joint probability for independent events</h2></hgroup><article  id="joint-probability-for-independent-events" class="smaller ">
 
 <p>If event \(A\) and event \(B\) are independent, then \(P(A \cap B) = P(A) \times P(B)\). This is called the <em>multiplication rule</em> for independent events. If this property does not hold then the events are called <em>dependent</em>.</p>
 
-<h3>Mutually exclusive events versus independent events</h3>
+</article></slide><slide class=""><hgroup><h2>Mutually exclusive events versus independent events</h2></hgroup><article  id="mutually-exclusive-events-versus-independent-events" class="smaller ">
 
 <p>Often learners confuse the notions of mutually exclusive (disjoint) events and independent events. Here we mean independent in the sense that one event occurring does not change the chances of another event occurring. In other words, The events behave <em>independently</em>.</p>
 
 <p>On the other hand, disjoint events <strong>cannot</strong> occur at the same time. So disjoint events (with nonzero probability) are by definition, <em>dependent</em>.</p>
 
-<p>Let’s work through a quick proof that disjoint events are dependent:</p>
+</article></slide><slide class=""><hgroup><h2>Let’s work through a quick proof that disjoint events are dependent:</h2></hgroup><article  id="lets-work-through-a-quick-proof-that-disjoint-events-are-dependent" class="smaller ">
 
 <ul>
 <li>Suppose that two events, \(A,B\), have nonzero probability. I.e., \(P(A) &gt; 0\) and \(P(B) &gt; 0\). (if either event has zero probability then the events are trivially independent).</li>
@@ -3316,7 +3307,7 @@ prob_male^4</pre>
 
 <p>If \(A,B\) are independent then<br/>\(0=P(\emptyset)=P(A \cap B)=P(A) \times P(B)\). This implies that either \(P(A)=0\) or \(P(B)=0\), contradicting our first supposition. So \(A,B\) cannot be independent. Therefore, \(A,B\) are dependent events.</p>
 
-<h3>Marginal probability</h3>
+</article></slide><slide class=""><hgroup><h2>Marginal probability</h2></hgroup><article  id="marginal-probability" class="smaller ">
 
 <p>When dealing with two events (the joint setting), the probability of one event, \(A\), is called its <em>marginal probability</em>. Marginal probability is really important and we’ll discuss its calculation throughout the course. For a Universe with only two events, the marginal probability is found by summing its disjoint parts.</p>
 
@@ -3324,45 +3315,57 @@ prob_male^4</pre>
 
 <p>Then use Axiom 3:<br/>\(P(A) = P(A \cap B) + P(A \cap \tilde{B})\).</p>
 
-</article></slide><slide class=""><hgroup><h2>3. Conditional probability and Bayes’ Theorem</h2></hgroup><article  id="conditional-probability-and-bayes-theorem" class="smaller ">
+</article></slide><slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>3. Conditional probability and Bayes’ Theorem</h2></hgroup><article  id="conditional-probability-and-bayes-theorem" class="smaller ">
+
+</article></slide><slide class=""><hgroup><h2>Conditional probability and Bayes’ Theorem</h2></hgroup><article  id="conditional-probability-and-bayes-theorem-1" class="smaller ">
 
 <p>(from Bolstad &amp; Curran Ch.4, Section 4.5, p.67)</p>
 
 <p>\(P(B | A) = \frac{P(A \cap B)}{P(A)}\)</p>
 
-<h3>Reduced Universe idea</h3>
+</article></slide><slide class=""><hgroup><h2>Reduced Universe idea</h2></hgroup><article  id="reduced-universe-idea" class="smaller ">
 
 <p>Let’s discuss Figure 4.7 in Bolstad p.67.</p>
 
-<h3>Multiplication rule</h3>
+</article></slide><slide class=""><hgroup><h2>Multiplication rule</h2></hgroup><article  id="multiplication-rule" class="smaller ">
 
-<p>A simple restatement of the conditional probability:</p>
+<p>A restatement of the conditional probability:</p>
 
 <p>\(P(A \cap B) = P(B | A) \times P(A)\)</p>
 
 <p>But this is powerful! Now we can compute the joint probability by multiplying the conditional probability by the marginal probability.</p>
 
-<h3>Conditional probability for independent events</h3>
+</article></slide><slide class=""><hgroup><h2>Conditional probability for independent events</h2></hgroup><article  id="conditional-probability-for-independent-events" class="smaller ">
 
 <p>Intuitively, independence means that one event occurring or not occurring does <strong>not</strong> affect the chances of the other event occurring. I.e., \(P(B|A) = P(B)\). From the independence condition we see this is the case:</p>
 
 <p>\(P(B | A) \times P(A) = P(A \cap B) = P(B) \times P(A)\). This implies that \(P(B) = P(B|A)\).</p>
 
-<h3>Lie detector demonstration</h3>
+<!-- 
+## Lie detector demonstration
 
-<p>&lt;Gelman/Nolan Section 8.5.2, p.127&gt;</p>
+<Gelman/Nolan Section 8.5.2, p.127>
+ -->
 
-</article></slide><slide class=""><hgroup><h2>Bayes’ Theorem</h2></hgroup><article  id="bayes-theorem" class="smaller ">
+</article></slide><slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>Bayes’ Theorem</h2></hgroup><article  id="bayes-theorem" class="smaller ">
 
-<p>(from Bolstad &amp; Curran Ch.4, Section 4.6, p.68)</p>
+</article></slide><slide class=""><hgroup><h2>Bayes’ Theorem</h2></hgroup><article  id="bayes-theorem-1" class="smaller ">
+
+<p>For two events \(A,B\) we can restate conditional probability in a powerful new form called Bayes’ Theorem or Bayes’ rule:</p>
+
+<p>\(P( B | A) = \frac{P( A \cap B) }{P(A)} = \frac{ P(A|B) \times P(B) }{P(A)}\).</p>
+
+<p>For a finite collection of events we can also state Bayes’ rule as:</p>
 
 <p>\(P(B_i | A) = \frac{P(A \cap B_i)}{P(A)}= \frac{P(A | B_i) \times P(B_i)}{\sum_{j=1}^n P(A|B_j) \times P(B_j)}\).</p>
 
-<h3>Bolstad Example 4.1</h3>
+<p>(from Bolstad &amp; Curran Ch.4, Section 4.6, p.68).</p>
+
+</article></slide><slide class=""><hgroup><h2>Bolstad Example 4.1</h2></hgroup><article  id="bolstad-example-4.1" class="smaller ">
 
 <p>Let’s discuss Figures 4.8, 4.9, p.70</p>
 
-<h3>Bayes’ Theorem: The Key to Bayesian Statistics</h3>
+</article></slide><slide class=""><hgroup><h2>Bayes’ Theorem: The Key to Bayesian Statistics</h2></hgroup><article  id="bayes-theorem-the-key-to-bayesian-statistics" class="smaller ">
 
 <p>Now let’s see how we use Bayes’ Theorem to revise our beliefs on the basis of evidence.</p>
 
@@ -3374,21 +3377,19 @@ prob_male^4</pre>
 
 <p><strong>Therefore, Bayes’ Theorem combines our prior beliefs with the evidence to update our belief about uncertain events!</strong></p>
 
-<h3>The Bayesian universe, p.71</h3>
+</article></slide><slide class=""><hgroup><h2>The Bayesian universe, p.71</h2></hgroup><article  id="the-bayesian-universe-p.71" class="smaller ">
 
 <p>Let’s discuss Figures 4.10, 4.11, p.72-73 in the context of the Bayesian universe.</p>
 
-<h3>Multiplying by a constant</h3>
+</article></slide><slide class=""><hgroup><h2>Multiplying by a constant</h2></hgroup><article  id="multiplying-by-a-constant" class="smaller ">
 
 <p>Easy to see that multiplying either the likelihood or prior by a constant results in the same <strong>posterior</strong> (constants cancel in the ratio). So only the <strong>relative</strong> weights of each on each possibility in the likelihood/prior matter.</p>
 
-</article></slide><slide class=""><hgroup><h2>ii. Closing</h2></hgroup><article  id="ii.-closing" class="smaller ">
-
-<p>Please answer the following questions and be prepared to share with the group.</p>
+</article></slide><slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>Closing</h2></hgroup><article  id="closing" class="smaller ">
 
 <ul>
-<li>What if anything surprised you today?</li>
-<li>What did you learn from that experience?</li>
+<li>Q &amp; A for the first HW?</li>
+<li>Questions/comments about anything we discussed?</li>
 </ul></article></slide>
 
 
