Revise SP21 B23 Ch.19 Y=XB

--- a/meeting_agendas/23_ch19_multLinReg.html
+++ b/meeting_agendas/23_ch19_multLinReg.html
@@ -3199,7 +3199,7 @@ slide:not(.current) .plotly.html-widget{
 
 <ul>
 <li>Students begin work on Final Exam.</li>
-<li>Read Ch.19 Multiple Linear Reg.</li>
+<li>Read Ch.19 Multiple Linear Reg</li>
 <li>Practice on HW 12 Ch.19 1-5, due Friday Apr 30.</li>
 <li>Receive and act on HW 11 Ch.18 1-3 feedback.</li>
 </ul>
