--- a/meeting_agendas/23_ch19_multLinReg.html
+++ b/meeting_agendas/23_ch19_multLinReg.html
@@ -3189,13 +3189,13 @@ slide:not(.current) .plotly.html-widget{
       <h1 data-config-title><!-- populated from slide_config.json --></h1>
       <h2 data-config-subtitle><!-- populated from slide_config.json --></h2>
       <p data-config-presenter><!-- populated from slide_config.json --></p>
-            <p style="margin-top: 6px; margin-left: -2px;">26 Apr 2021 (<em>updated: 2021-04-22)</em></p>
+            <p style="margin-top: 6px; margin-left: -2px;">26 Apr 2021 (<em>updated: 2021-04-26)</em></p>
           </hgroup>
   </slide>
 
-<slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>i. Admin &amp; Startup</h2></hgroup><article  class="smaller " id="i.-admin-startup">
+<slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>i. Admin &amp; Startup</h2></hgroup><article  id="i.-admin-startup" class="smaller ">
 
-</article></slide><slide class=""><hgroup><h2>Week 14 of 16 Focus</h2></hgroup><article  class="smaller " id="week-14-of-16-focus">
+</article></slide><slide class=""><hgroup><h2>Week 14 of 16 Focus</h2></hgroup><article  id="week-14-of-16-focus" class="smaller ">
 
 <ul>
 <li>Students begin work on Final Exam.</li>
@@ -3204,7 +3204,7 @@ slide:not(.current) .plotly.html-widget{
 <li>Receive and act on HW 11 Ch.18 1-3 feedback.</li>
 </ul>
 
-</article></slide><slide class=""><hgroup><h2>Today’s plan</h2></hgroup><article  class="smaller " id="todays-plan">
+</article></slide><slide class=""><hgroup><h2>Today’s plan</h2></hgroup><article  id="todays-plan" class="smaller ">
 
 <ul>
 <li>Discuss Ch.17,18 HW general feedback</li>
@@ -3215,32 +3215,50 @@ slide:not(.current) .plotly.html-widget{
 
 <p><em>Please contribute questions and comments</em></p>
 
-</article></slide><slide class=""><hgroup><h2>Discuss Ch.17 HW</h2></hgroup><article  class="smaller " id="discuss-ch.17-hw">
+</article></slide><slide class=""><hgroup><h2>Discuss Ch.17,18 HW</h2></hgroup><article  id="discuss-ch.1718-hw" class="smaller ">
 
-<p>17.3. It was a 2-sample t-test!</p>
+<ul>
+<li>17.3. It was a 2-sample t-test!</li>
+<li>18.3 It a credible region not interval.</li>
+</ul>
 
-</article></slide><slide class=""><hgroup><h2>Final Exam: Application.</h2></hgroup><article  class="smaller " id="final-exam-application.">
+</article></slide><slide class=""><hgroup><h2>Final Exam: Application.</h2></hgroup><article  id="final-exam-application." class="smaller ">
 
 <ul>
 <li>I’ve assessed your skills on each topic via HW and 3 midterms.</li>
-<li>Let’s discuss the rubric and guidelines (located in Canvas).</li>
 <li>Now I’d like you to apply your knowledge/skills to produce a scientific poster.</li>
-<li>You may use powerpoint but it is possible using using <code>rmarkdown</code>. See <code>postr</code> or <code>posterdown</code>. See <a href='https://gist.github.com/Pakillo/4854e5d760351206084f6be8abe476b2' title=''>https://gist.github.com/Pakillo/4854e5d760351206084f6be8abe476b2</a>.</li>
 <li>Let’s look at a model poster: alex_k_bayes_freq_presentation.pdf. I would say it has a little too much prose for a poster. Bullet points are good. Nice viz and model.</li>
-<li>Keep it simple, your project doesn’t need to be complicated like the 646-level poster above.</li>
-<li>Select or generate your data right away! Talk to me for guidance.</li>
+<li>Let’s discuss the rubric and guidelines (located in Canvas).</li>
+<li>You may use powerpoint but it is possible using using <code>rmarkdown</code>. See <code>postr</code> or <code>posterdown</code>. See <a href='https://gist.github.com/Pakillo/4854e5d760351206084f6be8abe476b2' title=''>https://gist.github.com/Pakillo/4854e5d760351206084f6be8abe476b2</a>.</li>
 </ul>
 
-</article></slide><slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>Bayesian Inference for Multiple Normal Linear Regression Model (Ch. 19)</h2></hgroup><article  class="smaller " id="bayesian-inference-for-multiple-normal-linear-regression-model-ch.-19">
+</article></slide><slide class=""><hgroup><h2>Final Exam Introduction</h2></hgroup><article  id="final-exam-introduction" class="smaller ">
 
-</article></slide><slide class=""><hgroup><h2>Discuss Ch.19 content</h2></hgroup><article  class="smaller " id="discuss-ch.19-content">
+<ul>
+<li>Keep it simple, your project doesn’t need to be complicated! I’m only given you a limited time to reduce the workload and see how well you can apply what you have learned.</li>
+<li>Select or generate your topic/data asap!</li>
+<li>Use Bayesian modeling and techniques from our textbook to answer a scientific question.</li>
+</ul>
+
+</article></slide><slide class=""><hgroup><h2>Final Exam Introduction</h2></hgroup><article  id="final-exam-introduction-1" class="smaller ">
+
+<ul>
+<li>Informal Zoom poster session on our last day 3 May 2021. This is mainly to get feedback from your peers and myself. This should result in catching any errors and polishing presentation.</li>
+<li>The purpose is to discuss the projects and get feedback in time to make adjustments.</li>
+<li>No one is judging or grading you. This is supposed to be fun and educational.</li>
+<li>I will give replace your lowest HW grade with a participation grade for showing up prepared and being an active, respectful participant.</li>
+</ul>
+
+</article></slide><slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>Bayesian Inference for Multiple Normal Linear Regression Model (Ch. 19)</h2></hgroup><article  id="bayesian-inference-for-multiple-normal-linear-regression-model-ch.-19" class="smaller ">
+
+</article></slide><slide class=""><hgroup><h2>Discuss Ch.19 content</h2></hgroup><article  id="discuss-ch.19-content" class="smaller ">
 
 <ul>
 <li>etext</li>
 <li>Example 19.1</li>
 </ul>
 
-</article></slide><slide class=""><hgroup><h2>Using <code>bayes.lm</code></h2></hgroup><article  class="smaller " id="using-bayes.lm">
+</article></slide><slide class=""><hgroup><h2>Using <code>bayes.lm</code></h2></hgroup><article  id="using-bayes.lm" class="smaller ">
 
 <pre class = 'prettyprint lang-r'>example(bayes.lm)</pre>
 
@@ -3373,15 +3391,15 @@ slide:not(.current) .plotly.html-widget{
 ## 
 ## Note: No prior given (Using flat prior).</pre>
 
-</article></slide><slide class=""><hgroup><h2>Final HW: Ch.19 1-5</h2></hgroup><article  class="smaller " id="final-hw-ch.19-1-5">
+</article></slide><slide class=""><hgroup><h2>Final HW: Ch.19 1-5</h2></hgroup><article  id="final-hw-ch.19-1-5" class="smaller ">
 
 <ul>
-<li>Execute the code and think/understand the problem for 19.1-19.3. Present, nterpret and discuss the results.</li>
-<li>19.4 description is lacking. The goal is to model <code>bwt</code> as a function of the all predictors (covariates). Use the formula <code>bwt ~ .</code>. Note that the prior expects a list. See the example in <code>bayes.lm</code> for example use. Don’t forget there is a prior for the intercept \(\beta_0\)!. **Interpret the output a little for me*.</li>
+<li>Execute the code and think/understand the problem for 19.1-19.3. Present, interpret and discuss the results.</li>
+<li>19.4 description is lacking. The goal is to model <code>bwt</code> as a function of the all predictors (covariates). Use the formula <code>bwt ~ .</code>. Note that the prior expects a list. See the example in <code>bayes.lm</code> for example use. Don’t forget there is a prior for the intercept \(\beta_0\)!. <strong>Interpret the output for me</strong>.</li>
 <li>19.5 Use chi-squared test from Ch.18 (see 18.3 part iii for an example). Use <code>post.mean</code> and <code>post.var</code>.</li>
 </ul>
 
-</article></slide><slide class=""><hgroup><h2>Closing (5 min)</h2></hgroup><article  class="smaller " id="closing-5-min">
+</article></slide><slide class=""><hgroup><h2>Closing (5 min)</h2></hgroup><article  id="closing-5-min" class="smaller ">
 
 <ul>
 <li>What are some issues in HW that you could use guidance on?</li>
