bring repo up to date

--- a/meeting_agendas/25_posterSession.html
+++ b/meeting_agendas/25_posterSession.html
@@ -3128,7 +3128,7 @@ slide:not(.current) .plotly.html-widget{
       <h1 data-config-title><!-- populated from slide_config.json --></h1>
       <h2 data-config-subtitle><!-- populated from slide_config.json --></h2>
       <p data-config-presenter><!-- populated from slide_config.json --></p>
-            <p style="margin-top: 6px; margin-left: -2px;">3 May 2021 (<em>updated: 2021-04-26)</em></p>
+            <p style="margin-top: 6px; margin-left: -2px;">3 May 2021 (<em>updated: 2021-05-03)</em></p>
           </hgroup>
   </slide>
 
@@ -3172,8 +3172,9 @@ slide:not(.current) .plotly.html-widget{
 
 <ul>
 <li>Thank you for a great semester!</li>
-<li>I hope you feel confident that you can correctly apply/communicate the techniques from Rizzo.</li>
-<li>I also hope that see the power of a computational approach to statistics.</li>
+<li>I hope you feel confident that you can correctly apply/communicate the techniques from Bolstad and Curran.</li>
+<li>I also hope that see the power of a Bayesian approach to statistics.</li>
+<li>It would mean a lot to me if you complete an evaluation at <a href='www.unr.edu/evaluate' title=''>www.unr.edu/evaluate</a>. Please remember that my job depends on student feedback. I appreciate your time to thoughfully complete the survey and provide honest ratings. I’d love to hear what I did well as well as how I can get better (please be kind when you do this).</li>
 <li>Best wishes for your future.</li>
 </ul></article></slide>
 
